<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:id="@+id/rowMain"
    android:padding="5dip"
	>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"	    
		    android:layout_gravity="center"
		    android:text="@string/layout_permission"
            android:layout_marginRight="5dp"
            android:textColor="#ff0000"
		    android:textSize="15dip"
		/>
		<TextView
		    android:id="@+id/permission"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"	    
		    android:layout_gravity="center"	    	    
		/>
	</LinearLayout>
	<TextView
	    android:id="@+id/permissionDescription"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:textColor="#00FF00"
	   	android:layout_margin="5dip"
		/>
	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dip"
		>
		<ImageView 
			android:id="@+id/packageicon" 
			android:layout_width="50dip" 
			android:layout_height="50dip"
		/>
		<TextView
		    android:id="@+id/Owner"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"    
		    android:layout_gravity="center"
		    android:textColor="#ff0000"
		    android:textSize="15dip"
            android:layout_marginRight="5dp"
            android:text="@string/layout_owner"
		/>
		<TextView
		    android:id="@+id/Owner2"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"    
		    android:layout_gravity="center"
		    android:textColor="#00FF00"
		/>
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dip"
		>
		<TextView
			android:id="@+id/permissionis"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"	    
		    android:layout_gravity="center"
		    android:text="@string/permissionis"
            android:layout_marginRight="5dp"
        />
		<TextView
		    android:id="@+id/active"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"	    
		    android:layout_gravity="center"
		    android:textSize="15dip"
		/>
	</LinearLayout>
</LinearLayout>
